--- a/01-Variables/index.html
+++ b/01-Variables/index.html
@@ -10,6 +10,9 @@
     <h2>let, const, & var</h2>
     <p>Open the console to see the output.</p>
     
-
+    <script>
+       var name = "Matt" // good convention to leave ; off.  Interesting!!
+       console.log(name);
+    </script>
 </body>
 </html>
