changeName() function call affects global variable (var).

--- a/01-Variables/index.html
+++ b/01-Variables/index.html
@@ -12,6 +12,10 @@
     
     <script>
        var name = "Matt" // good convention to leave ; off.  Interesting!!
+       function changeName() {
+           name="Payne"
+       }
+       changeName()
        console.log(name);
     </script>
 </body>
