var keyword block scopped local variable that hides the global.

--- a/01-Variables/index.html
+++ b/01-Variables/index.html
@@ -13,7 +13,7 @@
     <script>
        var name = "Matt" // good convention to leave ; off.  Interesting!!
        function changeName() {
-           name="Payne"
+           var name="Payne"
        }
        changeName()
        console.log(name);
