--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -35,7 +35,7 @@
     <!-- li>a then escape then tab to make emmit go.  -->
     <!-- escape removes the suggestions.  Tab makes emmet.io expand it. -->
     <ul class="links">
-        <li><a href=""></a></li>
+        <li><a href="http://google.com">Google Search</a></li>
     </ul>
 
     <script>
