document.querySelector ROCKS!

--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -43,6 +43,8 @@
         // The { } in template literals are javascript blocks.
         // you could do what ever you want.
         // Use developer.mozilla.org NOT w3Schools!
+        const form = document.querySelector('form') // use valid CSS selector 
+        const list = document.querySelector('.links')
     </script>
 
 </body>
