addEventListener is prefered way

--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -49,6 +49,11 @@
         const linkName = document.querySelector('#linkName')
         const linkURL = document.querySelector('#linkURL')
         console.log(1,linkName, linkURL)
+
+        function doSomethingWithForm() {
+            
+        }
+        form.addEventListener('submit',doSomethingWithForm)
     </script>
 
 </body>
