changed to anonymous funciton

--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -50,10 +50,9 @@
         const linkURL = document.querySelector('#linkURL')
         console.log(1,linkName, linkURL)
 
-        function doSomethingWithForm() {
-            
-        }
-        form.addEventListener('submit',doSomethingWithForm)
+        form.addEventListener('submit',function() {
+            console.log("submit was clicked")
+        })
     </script>
 
 </body>
