preserve log in dev tools console is important trick.

--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -52,6 +52,9 @@
 
         form.addEventListener('submit',function() {
             console.log("submit was clicked")
+            // could see this via the network tab.
+            // browser refreshes too fast to see 
+            // could check preserve log to see logs that are there before a reload.
         })
     </script>
 
