--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -50,11 +50,9 @@
         const linkURL = document.querySelector('#linkURL')
         console.log(1,linkName, linkURL)
 
-        form.addEventListener('submit',function() {
+        form.addEventListener('submit',function(event) {
+            event.preventDefault()
             console.log("submit was clicked")
-            // could see this via the network tab.
-            // browser refreshes too fast to see 
-            // could check preserve log to see logs that are there before a reload.
         })
     </script>
 
