prevent form from submitting

--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -51,7 +51,7 @@
         console.log(1,linkName, linkURL)
 
         form.addEventListener('submit',function(event) {
-            event.preventDefault()
+            event.preventDefault() // keep form from submitting
             console.log("submit was clicked")
         })
     </script>
