--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -53,6 +53,11 @@
         form.addEventListener('submit',function(event) {
             event.preventDefault() // keep form from submitting
             console.log("submit was clicked")
+            let name = linkName.value 
+            let url = linkURL.value 
+            list.innerHTML+=`<li><a href="http://${url}" target="_blank">${name}</a></li>`
+
+            // could: form.submit() // Send to the server
         })
     </script>
 
