--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -55,7 +55,9 @@
             console.log("submit was clicked")
             let name = linkName.value 
             let url = linkURL.value 
-            list.innerHTML+=`<li><a href="http://${url}" target="_blank">${name}</a></li>`
+            list.innerHTML+=`<li>
+                   <a href="http://${url}" target="_blank">${name}</a>
+                </li>`
 
             // could: form.submit() // Send to the server
         })
