--- a/02-Template-Strings/index.html
+++ b/02-Template-Strings/index.html
@@ -57,11 +57,15 @@
             let url = linkURL.value 
             list.innerHTML+=
             `<li>
-                   <a href="http://${url}" target="_blank">${name}</a>
+                   <a href="${getHTTP(url)}" target="_blank">${name}</a>
             </li>`
 
             // could: form.submit() // Send to the server
         })
+
+        function getHTTP(url) {
+            return `http://${url}`;
+        }
     </script>
 
 </body>
