two old ways to declare functions.

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -10,7 +10,19 @@
     <button>Click Me</button>
 
     <script>
-        // most confusing topic in ES6
+        // most confusing topic in ES6. 
+        // 1) Condensed syntax
+        // 2) Scoping "improvement"
+        function basic() {
+
+        }
+
+        var basic2 = function() {
+
+        }
+
+        
+
     </script>
 
 </body>
