Click event old way

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -18,10 +18,17 @@
         }
 
         var basic2 = function() {
-
+            console.log('Same.  Kyle Simplson you do not know JS examplains more')
         }
 
-        
+        var basic3 = () => {
+            console.log('New way, still the same.')
+        }
+
+        const button = document.querySelector('button')
+        button.addEventListener('click',function() {
+            console.log("CLICK!")
+        })
 
     </script>
 
