Using => for click handler

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -26,8 +26,8 @@
         }
 
         const button = document.querySelector('button')
-        button.addEventListener('click',function() {
-            console.log("CLICK!")
+        button.addEventListener('click',() => {
+            console.log("CLICK! new function way")
         })
 
     </script>
