event is better variable name

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -26,8 +26,8 @@
         }
 
         const button = document.querySelector('button')
-        button.addEventListener('click',(e) => {
-            console.log("CLICK! new function way",e)
+        button.addEventListener('click',(event) => {
+            console.log("CLICK! new function way",event)
         })
 
     </script>
