--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -26,6 +26,7 @@
         }
 
         const button = document.querySelector('button')
+        // if just one parameter don't need () but good to leave them in.
         button.addEventListener('click',(event) => {
             console.log("CLICK! new function way",event)
         })
