--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -27,6 +27,7 @@
 
         const button = document.querySelector('button')
         // if just one parameter don't need () but good to leave them in.
+        // if no parameters, must have ()
         button.addEventListener('click',(event) => {
             console.log("CLICK! new function way",event)
         })
