--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -32,6 +32,10 @@
             console.log("CLICK! new function way",event)
         })
 
+        var addValues = (x,y) => {
+            return x + y
+        }
+
     </script>
 
 </body>
