--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -36,6 +36,11 @@
             return x + y
         }
 
+        // Since one parameter, don't need parenthensis
+        var double = x => {
+            return x * 2
+        }
+
     </script>
 
 </body>
