implicit return demo

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -37,9 +37,8 @@
         }
 
         // Since one parameter, don't need parenthensis
-        var double = x => {
-            return x * 2
-        }
+        // return is implied.
+        var double = x => x * 2
 
     </script>
 
