double called via interpolation

--- a/03-Arrow-Functions/index.html
+++ b/03-Arrow-Functions/index.html
@@ -29,7 +29,7 @@
         // if just one parameter don't need () but good to leave them in.
         // if no parameters, must have ()
         button.addEventListener('click',(event) => {
-            console.log("CLICK! new function way",event)
+            console.log(`CLICK! new function way double(2)=${double(2)}`,event)
         })
 
         var addValues = (x,y) => {
