Starting todo exercise

--- a/03-Arrow-Functions/todo.html
+++ b/03-Arrow-Functions/todo.html
@@ -82,7 +82,14 @@
 
     
     <script>
+    const todoList = document.querySelector("#todolist")
+    const form = document.querySelector('form')
+    const todo = document.querySelector('#newitem')
 
+    form.addEventListener('submit',(event) => {
+        event.preventDefault()
+        console.log('submit')
+    })
         
 
     </script>
