helper function approach working

--- a/03-Arrow-Functions/todo.html
+++ b/03-Arrow-Functions/todo.html
@@ -92,9 +92,12 @@
     form.addEventListener('submit',(event) => {
         event.preventDefault()
         console.log('submit')
-        todoList.innerHTML += `<li>${todo.value}</li>`
+        createTodo(todo.value)
     })
         
+    var createTodo = (todoText) => {
+        todoList.innerHTML += `<li>${todoText}</li>`;
+    }
 
     </script>
 </body>
