One line functions are hard to read

--- a/03-Arrow-Functions/todo.html
+++ b/03-Arrow-Functions/todo.html
@@ -95,9 +95,7 @@
         createTodo(todo.value)
     })
         
-    var createTodo = (todoText) => {
-        todoList.innerHTML += `<li>${todoText}</li>`;
-    }
+    var createTodo = todoText => todoList.innerHTML += `<li>${todoText}</li>`;
 
     </script>
 </body>
