Clear field and refocus

--- a/03-Arrow-Functions/todo.html
+++ b/03-Arrow-Functions/todo.html
@@ -93,6 +93,8 @@
         event.preventDefault()
         console.log('submit')
         createTodo(todo.value)
+        todo.value=''
+        todo.focus()
     })
         
     var createTodo = todoText => todoList.innerHTML += `<li>${todoText}</li>`;
