... spread operator for combining arrays.

--- a/04-Gather-Spread/index.html
+++ b/04-Gather-Spread/index.html
@@ -23,7 +23,8 @@
         //Spread (spreads out the values)
         var group1 = ["apple", "orange", "banana"]
         var group2 = ["grape", "cherry", "pineapple"]
-        
+        var combined = [...group1, ...group2]
+        console.log(3,combined)
 
 
         /***************************/
