array destructure starts

--- a/04-Gather-Spread/index.html
+++ b/04-Gather-Spread/index.html
@@ -30,7 +30,8 @@
         /***************************/
         //Destruturing: Stuff happing on the left site of the =
         var list = [1, 2, 3, 4, 5]
-
+        var [first] = list
+        console.log(4,first)
 
 
         //Destructuring with objects
