old way of building an object

--- a/04-Gather-Spread/index.html
+++ b/04-Gather-Spread/index.html
@@ -45,7 +45,13 @@
         var name = "John"
         var state = "Nebraska"
         var conference = "Infotec"
-        
+        // old way
+        var person = {
+            name: name,
+            state: state,
+            conference: conference
+        }      
+        console.log(person)  
 
 
 
