Starting symbols and iterators

--- a/05-Iterables/index.html
+++ b/05-Iterables/index.html
@@ -10,6 +10,7 @@
     <h2>Symbols and Iterators</h2>
 
     <script>
+        // Symbols and iterators are weird.  Crazy async usecases.
         var list = ["one", "two", "three", "four"]
 
     </script>
