--- a/05-Iterables/index.html
+++ b/05-Iterables/index.html
@@ -16,9 +16,9 @@
         // Symbols are unknown unique values
         var iterator = list[Symbol.iterator]()
         console.log(iterator.next())
-        // console.log(iterator.next)
-        // console.log(iterator.next)
-
+        console.log(iterator.next())
+        console.log(iterator.next())
+        // Note the value and done attributes.
     </script>
     
 </body>
