--- a/06-Promises/index.html
+++ b/06-Promises/index.html
@@ -19,6 +19,8 @@
 
     <script>
         'use strict'
+
+        // Promises are used for async things.
         const form = document.querySelector('form')
         const searchField = document.querySelector('input[type=text')
         const output = document.querySelector('.results')
