notes on async functions

--- a/07-Async-Functions/index.html
+++ b/07-Async-Functions/index.html
@@ -18,7 +18,9 @@
     <p class="results"></p>
 
     <script>
-        
+        // Async is an ES7 thing (not ES6)
+        // See the finished-files branch for example worked with them.
+        // More readable -- use await keyword instead of then.
 
     </script>
 </body>
